--- a/FRONTEND/photoDrop/package.json
+++ b/FRONTEND/photoDrop/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "country-data": "^0.0.31",
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
